--- a/config.json
+++ b/config.json
@@ -1,14 +1,14 @@
 {
-	"global": {
+    "global": {
         "debug": true
     },
-	"database": {
+    "database": {
         "conns": {
             "default": "mongodb://localhost:27017/db",
             "connName2": "connecstring2"
         }
     },
-	"ginserver": {
+    "webserver": {
         "addr": ":8082"
     }
 }
