根据模块的配置自动生成模块文件

--- a/config.json
+++ b/config.json
@@ -1,14 +1,16 @@
 {
-    "global": {
-        "debug": true
-    },
-    "database": {
+	"database": {
         "conns": {
-            "default": "mongodb://localhost:27017/db",
-            "connName2": "connecstring2"
+            "default": "mongodb://localhost:27017/db"
         }
     },
-    "webserver": {
+	"webserver": {
         "addr": ":8082"
+    },
+	"global": {
+        "debug": true
+    },
+	"theme": {
+        "theme": "dark"
     }
 }
