--- a/config.json
+++ b/config.json
@@ -1,16 +1,14 @@
 {
-	"database": {
-        "conns": {
-            "default": "mongodb://localhost:27017/db"
-        }
+    "database": {
+        "conn": "mongodb://localhost:27017/db"
     },
-	"webserver": {
+    "webserver": {
         "addr": ":8082"
     },
-	"global": {
+    "global": {
         "debug": true
     },
-	"theme": {
-        "theme": "dark"
+    "theme": {
+        "theme": "default"
     }
 }
