--- a/config.json
+++ b/config.json
@@ -1,7 +1,14 @@
 {
-	"database": {"conn":"mongodb://localhost:27017/db"},
-	"theme": {"theme":"default"},
-	"webserver": {"addr":":8082"},
+	"database": {
+        "conn": "mongodb://localhost:27017",
+        "db": "golego"
+    },
+	"theme": {
+        "theme": "default"
+    },
+	"webserver": {
+        "addr": ":8082"
+    },
 	"global": {
         "debug": true
     }
